force-app/main/default/objects/Mapping_Rule__c/Mapping_Rule__c.object-meta.xml
<CustomObject>
    <label>Mapping Rule</label>
    <pluralLabel>Mapping Rules</pluralLabel>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Field-level mapping rule linking a source-system column to a canonical Inbound_Staging__c field. Supports optional transform logic for dry-run preview.</description>
</CustomObject>