force-app/main/default/objects/Mapping_Rule__c/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <label>Default Value</label>
    <type>Text</type>
    <length>255</length>
    <description>Fallback value to use when the source field is blank or missing from the file.</description>
</CustomField>