force-app/main/default/objects/Mapping_Rule__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>Controls display ordering in the Mapping Rule Editor UI.</description>
</CustomField>