force-app/main/default/objects/Mapping_Rule__c/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <label>Source Field</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Column header name in the source file (case-insensitive match).</description>
</CustomField>