force-app/main/default/objects/Mapping_Rule__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <label>Source System</label>
    <type>Lookup</type>
    <referenceTo>Source_System__c</referenceTo>
    <relationshipLabel>Mapping Rules</relationshipLabel>
    <relationshipName>Mapping_Rules</relationshipName>
    <deleteConstraint>Cascade</deleteConstraint>
    <required>true</required>
</CustomField>