force-app/main/default/objects/Mapping_Rule__c/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <label>Target Field</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>API name of the Inbound_Staging__c field that receives the mapped value (e.g., Advertiser_Name__c).</description>
</CustomField>