force-app/main/default/objects/Mapping_Rule__c/fields/Transform_Logic__c.field-meta.xml
<CustomField>
    <fullName>Transform_Logic__c</fullName>
    <label>Transform Logic</label>
    <type>Text</type>
    <length>255</length>
    <description>Optional hint for dry-run preview (e.g., TRIM, UPPERCASE, EXTRACT_EMAIL_PREFIX, DERIVE_REVENUE_TYPE).</description>
</CustomField>