force-app/main/default/objects/Mapping_Rule__c/validationRules/Active_Requires_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Requires_Notes</fullName>
    <active>true</active>
    <description>Requires a Notes value when a rule is marked Active.</description>
    <errorConditionFormula>AND(Is_Active__c = TRUE, ISBLANK(Notes__c))</errorConditionFormula>
    <errorMessage>Notes are required when a rule is Active.</errorMessage>
</ValidationRule>